# python-advanced-tasks-solutions

./: .gitignore  README.md
task_01/: common.py  config.py  example_retry_class.py  example_retry_func.py  exceptions.py  retry_class_dec.py  retry_func_dec.py  weather_fetcher.py
task_02/: main_prime_iterator.py  main_stack.py
task_03/: app.py  main.py  requirements.txt
task_03/core/: config.py  currency_exists_check.py  currency_rates_getter.py  types.py
task_03/helpers/: json_coders.py  request_param_reader.py
task_04/: main.py
task_04/descriptors/: positive_number.py
task_04/shapes/: __init__.py  base.py  circle.py  rectangle.py  shape_meta.py
task_05/: README.md  pyproject.toml
task_05/currencies-application/: app.py  main.py
task_05/currencies-application/core/: currency_rates_getter.py  types.py
task_05/currencies-application/helpers/: request_param_reader.py
task_06/: README.md  pyproject.toml
task_06/currencies-application/: .gitignore  app.py
task_06/currencies-application/core/: config.py  currency_exists_check.py  currency_rates_getter.py  types.py
task_06/currencies-application/helpers/: json_coders.py  request_param_reader.py
task_06/currencies-application/tests/: conftest.py  test_app.py
task_06/currencies-application/tests/fixtures/: currencies_api_data.py  urls.py
task_06/currencies-application/tests/test_core/: test_currency_rates_getter.py
task_06/currencies-application/tests/test_helpers/: test_json_coders.py
task_06/currencies-application/tests/utils/: urls.py
task_07/: README.md  my_queue.py  pyproject.toml
task_07/tests/: test_my_queue.py
task_08/: README.md  pyproject.toml
task_08/app/: config.py  fetch_data.py  main.py  models.py  prepare_models.py  save_data.py
task_09/: docker-compose.yml  pyproject.toml
task_09/fastapi-auth-app/: main.py  run_main.py
task_09/fastapi-auth-app/alembic/versions/: 2024_10_20_1858-55b32425c43b_create_user_model.py  2024_10_20_1930-fa4c28841317_create_access_token_table.py
task_09/fastapi-auth-app/api/api_v1/: __init__.py  auth.py
task_09/fastapi-auth-app/core/: config.py
task_09/fastapi-auth-app/core/gunicorn/: application.py  logger.py
task_09/fastapi-auth-app/core/models/: access_token.py  user.py
task_09/fastapi-auth-app/core/schemas/: access_token.py  access_token_introspect.py  user.py
task_09/fastapi-auth-app/crud/: base_service.py
task_09/fastapi-auth-app/crud/auth/: __init__.py  access_token_header.py  access_token_introspect_service.py  base_token_validation_service.py  user_create_service.py  user_login_service.py  user_logout_service.py
task_10/: docker-compose.yml  pyproject.toml
task_10/fastapi-users-data-app/: create_fastapi_app.py  main.py
task_10/fastapi-users-data-app/alembic/versions/: 2024_10_22_1045-84266b31536e_create_users_table.py  2024_10_22_1057-741c17cfd38a_create_user_addresses_table.py  2024_10_22_1100-3cf427a7571c_create_posts_table.py
task_10/fastapi-users-data-app/api/api_v1/: __init__.py  dependencies.py  posts.py  user_posts.py  users.py
task_10/fastapi-users-data-app/commands/fill_db/: __main__.py  config.py  fetch_data.py  load_and_save_data.py  prepare_models.py
task_10/fastapi-users-data-app/core/: config.py
task_10/fastapi-users-data-app/core/gunicorn/: application.py  logger.py
task_10/fastapi-users-data-app/core/models/: __init__.py  base.py  post.py  user.py  user_address.py
task_10/fastapi-users-data-app/core/schemas/: post.py  user.py  (+2 more)
(+11 files in other folders)
