[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.10.5"
aiofiles = "^24.1.0"

[tool.poetry.group.lint.dependencies]
mypy = "^1.11.2"
types-aiofiles = "^24.1.0.20240626"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
coverage = "^7.6.2"
pytest-cov = "^5.0.0"
pytest-aiohttp = "^1.0.5"
aresponses = "^3.0.0"
black = "^24.10.0"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
minversion = "8.3"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
