[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"
pydantic = {extras = ["email"], version = "^2.9.2"}
pydantic-settings = "^2.6.0"
uvicorn = "^0.32.0"
aiohttp = "^3.10.10"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
asyncpg = "^0.30.0"
alembic = "^1.13.3"
gunicorn = "^23.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pytest = "^8.3.3"

[tool.poetry.group.lint.dependencies]
mypy = "^1.12.1"
