[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"
pydantic = {extras = ["email"], version = "^2.9.2"}
pydantic-settings = "^2.6.0"
uvicorn = "^0.32.0"
aiohttp = "^3.10.10"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
asyncpg = "^0.30.0"
alembic = "^1.13.3"
gunicorn = "^23.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pytest = "^8.3.3"
ruff = "^0.7.0"

[tool.poetry.group.lint.dependencies]
mypy = "^1.12.1"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
plugins = [
    "pydantic.mypy",
]
exclude = [
    '^file1\.py$',  # TOML literal string (single-quotes, no escaping necessary)
    "^file2\\.py$",  # TOML basic string (double-quotes, backslash and other characters need escaping)
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
